--- a/style.css
+++ b/style.css
@@ -1,11 +1,52 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+main, #text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#title {
+    margin-left: 15px;
+    font-size: 40px
+}
+
 #colors {
     display: flex;
 }
 
 .ball {
-    height: 100px;
-    width: 100px;
-    border: 1px solid black;
+    height: 75px;
+    width: 75px;
+    border: 2px solid black;
     margin-left: 5px;
     border-radius: 100%;
+    cursor: pointer;
+}
+
+#score {
+    font-size: 16px;
+    margin-bottom: 20px;
+    margin-top: 5px;
+}
+
+#rgb-color {
+    font-size: 20px;
+    margin-top: 50px;
+    margin-bottom: 0;
+}
+
+#answer {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+button {
+    border-radius: 2px;
+    cursor: pointer;;
 }
